# iam-proxy-italia

./: .dockerignore  .gitguardian.yaml  .gitignore  .gitmodules  .lycheecache  .lycheeignore  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  README-CIEOIDC.md  README-DEV.md  README-Python-Dev.md  README-SAML2-DEV.md  README-Setup.md  README-TEST.md  README.idpy.forks.mngmnt.md  README.md  README.mongo.md  flake.nix  pyproject.toml  requirements.txt
.cursor/: mcp.json
.github/scripts/: install-act.sh  patch-pyeudiw-branch.sh
.github/workflows/: cie-oidc-backend.yml  docker-compose-test.yml  docker-ghcr-cd-djangosaml2-sp.yaml  docker-ghcr-cd-static.yaml  docs-link-check.yml  lint.yml  python-app.yml  release-drafter.yml  security-audit.yml  static-accessibility.yml  static-lint.yml  static-preview-cleanup.yml  static-preview-deploy.yml
.zed/: settings.json
Docker-compose/: README.md  docker-compose.yml  env.example  pyeudiw-healthcheck.sh  run-docker-compose.sh  stop-docker-compose.sh
Docker-compose/certbot/: certbot.sh
Docker-compose/mongo/: init-mongo.sh
Docker-compose/nginx/: certbot.sh  sync-static-assets.sh
Docker-compose/nginx/conf.d/: 00-http-lang-map.conf  default.conf
Docker-compose/nginx/html/: index.html
charts/iam-proxy-italia/: .gitignore  Chart.yaml  README.md  sync-config-files.sh  values.yaml
charts/iam-proxy-italia/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-static.yaml  deployment.yaml  hpa.yaml  httproute.yaml  (+12 more)
docs/: CHANGELOG-master-to-dev.md  README.SATOSA.internals.md  README.md  README.run-docker-compose.sh.md  TROUBLESHOOTING.md  backends-frontends-configuration.md  cie-oidc-backend.md  demo-djangosaml2-sp.md  demo-login-walkthrough.md  demo-oidc-rp.md  docker-compose.md  docker_compose_profiles.md  external-references.md  for-developers.md  gallery.md  gen_x509_chain_iam_proxy.md  identity-python-forks.md  mongodb-env.md  mongodb.md  oidc_rp_debuggers.md  pyff-metadata.md  python-development.md  readme.wwwallet_setup.md  run-docker-compose.md  run-docker-compose.sh.md  saml2-development.md  satosa-internals.md  satosa-nginx-vhost.md  satosa-nginx_compose_service.md  satosa_oidcop_oidc_client_registration.md  setup.md  testing.md
example/: entrypoint.sh  proxy_conf.yaml
example/backends/: spidsaml2.py
example/templates/: authorization_error.html
example_sp/djangosaml2_sp/: README.md
gallery/: README.md
iam-proxy-italia-project/: README.md  entrypoint.sh  internal_attributes.yaml  proxy_conf.yaml
iam-proxy-italia-project-demo-examples/: django.Dockerfile  entrypoint.sh
iam-proxy-italia-project-demo-examples/djangosaml2_sp/: README.md  requirements.txt
iam-proxy-italia-project-demo-examples/jwtconnect_python_oidcrp/: README.md
iam-proxy-italia-project-demo-examples/oidc_rp/: README.md  entrypoint.sh  env.example  healthcheck.sh  init_oidcop_mongo.py  main.py  oidc_rp.Dockerfile  requirements.txt  settings.py
iam-proxy-italia-project-demo-examples/pagopa-wallet-cli/: pagopa-cli.Dockerfile  pagopa-entrypoint.sh
iam-proxy-italia-project-demo-examples/pysaml2/: README.md
iam-proxy-italia-project-demo-examples/spid_cie_oidc_django/: Dockerfile  entrypoint.sh  healthcheck.sh  prepare.sh  prepare_dump.py
iam-proxy-italia-project-demo-examples/wallet-instance-demo/: generate_wallet_config.py  prepare_wallet_config.py  wallet_instance_demo.Dockerfile  wi_entrypoint.sh
iam-proxy-italia-project/backends/: ciesaml2.py  spidsaml2.py  spidsaml2_validator.py
iam-proxy-italia-project/pki/: build_spid_certs.sh
iam-proxy-italia-project/static/: Dockerfile  README.md  disco.html  error_page.html  it-wallet.html  package-lock.json  package.json  playwright.config.ts
iam-proxy-italia-project/templates/: base.html  base_shell.html  cie_login_error.html  echo_attributes.html  frame.html  qr_code.html  spid_base.html
iam-proxy-italia-project_sp/djangosaml2_sp/: README.md
preview/: index.html
preview/dependabot-npm_and_yarn-iam-proxy-italia-project-static-postcss-8.5.12/: it-wallet.html
preview/dependabot-npm_and_yarn-iam-proxy-italia-project-static-qs-6.15.2/: disco.html  it-wallet.html  qrcode-demo.html
preview/dependabot-npm_and_yarn-iam-proxy-italia-project-static-xmldom-xmldom-0.8.13/: package-lock.json
preview/dependabot-pip-urllib3-2.7.0/: disco.html
preview/dev/: disco.html  error_page.html  qrcode-demo.html
preview/feature-wallet-instance-v-1-3-3/: it-wallet.html  package-lock.json
preview/master/: package-lock.json
preview/sec-fix-3.2.1/: .preview-deploy-meta  disco.html  it-wallet.html  package-lock.json
preview/statics-accessibility/: README.md  disco.html  error_page.html  it-wallet.html  package-lock.json  package.json  playwright.config.ts
preview/ux-ui/: disco.html  it-wallet.html
pyff_example/: README.md
scripts/: gen_x509_chain_iam_proxy.py  sync-nginx-static-to-project.sh
(+201 files in other folders)
