[project]
name = "iam-proxy-italia"
version = "3.0"
description = "IAM Proxy Italia"
authors = [
    {name = "Giuseppe De Marco",email = "demarcog83@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pip>=26.0",  # CVE-2026-1703: path traversal when extracting wheels; fixed in 26.0
    "pysaml2 @ git+https://github.com/peppelinux/pysaml2@pplnx-v7.5.3",
    "satosa @ git+https://github.com/peppelinux/SATOSA@pplnx-v8.5.2",
    "satosa-oidcop @ git+https://github.com/UniversitaDellaCalabria/SATOSA-oidcop@v4.0.0",
    "pyeudiw[satosa] @ git+https://github.com/italia/eudi-wallet-it-python@2.0.1",
    "aiohttp (>=3.11.11,<4.0.0)",
    "uwsgi (>=2.0.28,<3.0.0)",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
    "spid-sp-test",
    "pytest-asyncio",
    "pyOpenSSL>=24.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["backends.cieoidc"]
omit = ["*/endpoints/extend_session_endpoint*","*/utils/handlers/*", "*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false
