[project]
name = "iam-proxy-italia"
version = "3.1.1"
description = "IAM Proxy Italia"
authors = [
    {name = "Giuseppe De Marco",email = "demarcog83@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pip>=26.0",  # CVE-2026-1703: path traversal when extracting wheels; fixed in 26.0
    "setuptools>=78.1.1",  # PYSEC-2022-43012, PYSEC-2025-49, CVE-2024-6345
    "pysaml2 @ git+https://github.com/peppelinux/pysaml2@pplnx-v7.5.3",
    "satosa @ git+https://github.com/peppelinux/SATOSA@pplnx-v8.5.2",
    "satosa-oidcop==4.1.0",
    "pyeudiw[satosa] @ git+https://github.com/italia/eudi-wallet-it-python@2.2.0",
    "aiohttp (>=3.11.11,<4.0.0)",
    "uwsgi (>=2.0.28,<3.0.0)",
    "werkzeug>=3.1.6"  # CVE-2026-27199: safe_join Windows device names; fixed in 3.1.6
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
    "spid-sp-test",
    "pytest-asyncio",
    "pyOpenSSL>=24.0",
    "pip-audit (>=2.10.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["backends.cieoidc"]
omit = ["*/endpoints/extend_session_endpoint*", "*/storage/interfaces/storage*","*/utils/handlers/*", "*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false
